Fixing nsbeta2+ bug 44115, properly handle area elements even if the href is a relative url, r=vidur@netscape.com